# image_retrieval

./: .gitignore  CMakeLists.txt  README.md
image_retrieval/: demo.py
image_retrieval/ann/: CMakeLists.txt  binary_index.cc  binary_index.h  flat_index.cc  flat_index.h  hnsw_index.cc  hnsw_index.h  index_interface.h  search_engine.cc  vector_distance.h  vector_distance_benchmark.cc  vector_distance_test.cc
image_retrieval/clustering/: CMakeLists.txt  clustering.cc  kmeans.cc  kmeans.h  kmeans_test.cc
image_retrieval/concurrency/: CMakeLists.txt  thread_pool.cc  thread_pool.h
image_retrieval/feature_extraction/: CMakeLists.txt  feature.proto  feature_decoder.cc  feature_decoder_utils.h  feature_test.py  imagenet_dataset.py  inferencer.py  resnet50.py
image_retrieval/object_detection/: yolov5.py
